Fixed errors, small edits

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
     <section class="element">
       <h2>Contact Methods</h2>
-      <p>Let's chat through the methods shown below. I usually respond pretty quick, within one to two days.</p>
+      <p>We can chat through the ways shown below. I usually respond pretty quick, within one to two days.</p>
       <address>
         <p>Email (Most preferred): enicolas@sfu.ca</p>
         <p>Phone: 778-111-2222</p>
