--- a/style-guide.html
+++ b/style-guide.html
@@ -165,7 +165,7 @@
       <h4>Rendered Element:</h4>
       <div class="hero-content-container">
         <div class="hero-text-container">
-          <h2 class="site-title">EJ Nicolas</h1>
+          <h2 class="site-title">EJ Nicolas</h2>
           <a  href="projects.html" class="button-nav button-lg">Projects</a>
           <a href="contact.html" class="button-nav button-lg">Contact</a>
         </div>
@@ -196,6 +196,14 @@
           <a class="button-nav button-md" href="project-ant.html">Detailed Look</a>
         </section>
       </div>
+    </section>
+
+    <section id="citations">
+      <h2>Citations</h2>
+      <ul>
+        <li>Graphics for Phantom's Cry and Ant Blast were created by Christine Drummond, Joyce Li and Kylie Xu, 2020</li>
+        <li>Portrait was photographed by Albert Leung, 2020</li>
+      </ul>
     </section>
 
     <footer>
